--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "node index.js",
@@ -13,6 +14,6 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "hono": "^4.4.10"
+    "express": "^4.17.1"
   }
 }
