--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.11.3",
+    "dotenv": "^16.4.5"
   }
 }
