working lexical editor

--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/list": "^0.29.0",
+    "@lexical/markdown": "^0.29.0",
+    "@lexical/react": "^0.29.0",
+    "@lexical/rich-text": "^0.29.0",
+    "lexical": "^0.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "wouter": "^3.6.0"
   },
   "devDependencies": {
