--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^22.13.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/sharedb": "^5.1.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
