--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "pg": "^8.11.3",
-    "sharedb": "^5.2.1"
+    "sharedb": "^5.2.1",
+    "sharedb-postgres": "^5.0.1"
   }
 }
