--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-fox-toast": "^1.10.20",
     "reconnecting-websocket": "^4.4.0",
     "sharedb": "^5.2.1",
     "wouter": "^3.6.0"
