--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "start": "cd server && pnpm start"
   },
   "devDependencies": {
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "concurrently": "^8.2.2"
   },
   "workspaces": [
@@ -23,6 +25,8 @@
     "server"
   ],
   "dependencies": {
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10"
   }
 }
