--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,20 @@
 node_modules
 .pnp
 .pnp.js
+.pnpm-store/
 
 # Build outputs
 dist
 dist-ssr
 *.local
 build
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # Logs
 logs
@@ -29,9 +37,5 @@ lerna-debug.log*
 *.sln
 *.sw?
 
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# OS specific
+Thumbs.db
