--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "NODE_ENV=production && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,13 +14,17 @@
     "@lexical/markdown": "^0.29.0",
     "@lexical/react": "^0.29.0",
     "@lexical/rich-text": "^0.29.0",
+    "inherits": "^2.0.4",
     "lexical": "^0.29.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-fox-toast": "^1.10.20",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "reconnecting-websocket": "^4.4.0",
     "sharedb": "^5.2.1",
+    "util": "^0.12.5",
     "wouter": "^3.6.0"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "postcss": "^8.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
