--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,9 +10,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - db:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_dev:/var/lib/postgresql/data
+      - ./server/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U notie -d notiedb"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  db:
+  db_dev:
     driver: local
