--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.11.3",
     "sharedb": "^5.2.1",
-    "sharedb-postgres": "^5.0.1"
+    "sharedb-postgres": "^5.0.1",
+    "ws": "^8.18.1"
   }
 }
