--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:client": "cd client && pnpm run dev",
     "dev:server": "cd server && pnpm run dev",
     "dev": "concurrently \"pnpm:dev:client\" \"pnpm:dev:server\"",
+    "dev:test": "cd client && pnpm run test",
     "dev:db": "docker-compose -f docker-compose.dev.yml up -d",
     "dev:db:down": "docker-compose -f docker-compose.dev.yml down",
     "dev:full": "pnpm run dev:db && pnpm run dev",
